# OpenGL_graphics

./: .gitignore  .gitmodules  CMakeLists.txt
include/: camera.h  gl.h  gl_function.in  gl_loader.h  scene_1.h  scene_base.h  shader.h  window.h
models/: cube_position_normal_coords.in
scripts/: run.sh
shaders/: cube.fs  cube.vs  gaussian_filter_3x3_9sample.fs  gaussian_filter_3x3_9sample.vs  gaussian_filter_3x3_9triangles.fs  gaussian_filter_3x3_9triangles.vs  out_texture.fs  out_texture.vs
src/: camera.cpp  gl_loader.cpp  main.cpp  scene_1.cpp  scene_base.cpp  shader.cpp  window.cpp
